--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop-node-ready",
+  "name": "lollipop-cart",
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
@@ -39,6 +39,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "lollipop-cart": "file:",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.3",
